k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freerangecampers-website
  labels:
    app: freerangecampers
    tier: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freerangecampers
      tier: website
  template:
    metadata:
      labels:
        app: freerangecampers
        tier: website
    spec:
      containers:
      - name: freerangecampers-website
        image: docker.pkg.github.com/richardthombs/freerangecampers.com/freerangecampers-website:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: github
